src/css/app.scss
/* Custom color theme properties */
:root {
	--f7-theme-color: #0055d4;
	--f7-theme-color-rgb: 0, 85, 212;
	--f7-theme-color-shade: #0045ab;
	--f7-theme-color-tint: #0065fd;

	--f7-block-strong-bg-color: rgb(231, 231, 231);

	--gradiant: linear-gradient(to bottom, rgba(255, 255, 255, 0) 2%, rgb(255, 255, 255, 1) 15%);

	--light-visible: inherit;
	--dark-visible: None;

	--light-overlaw: rgba(255, 255, 255, 0.3);
	--dark-overlaw: rgba(0, 0, 0, 0.3);

	--transparent-overlaw: var(--light-overlaw);
	--transparent-underlaw: var(--dark-overlaw);


	color-scheme: light;

	/* --f7 */
	--f7-theme-color: #0055d4;
	--f7-theme-color-rgb: 0, 85, 212;
	--f7-theme-color-shade: #0045ab;
	--f7-theme-color-tint: #0065fd;

	--f7-list-bg-color: rgb(231, 231, 231);

	--accent-color: var(--f7-block-strong-bg-color);


	--f7-text-color: black;
	--f7-block-text-color: black;
	--f7-block-strong-text-color: black;
	--f7-grid-resize-handler-bg-color: rgba(0, 0, 0, 0.35);

	--f7-label-text-color: var(--f7-block-text-color);

	--border-radius-small: 5px;
	--border-radius: 10px;

	--f7-list-item-title-font-size: 14px;
	--f7-list-font-size: 14px;
	--f7-inline-label-font-size: 14px;
	--f7-table-head-font-size: 14px;

	--f7-list-item-min-height: 32px;

	--f7-input-font-size: 14px;
	--f7-input-height: 32px;
	--f7-input-padding-right: 22px;

	/* --f7-button-pressed-bg-color: rgb(75, 75, 75); */
}

:root .dark,
:root.dark {
	color-scheme: dark;

	--f7-text-color: white;
	--f7-block-text-color: white;
	--f7-block-strong-text-color: white;
	--f7-grid-resize-handler-bg-color: rgba(255, 255, 255, 0.35);

	--f7-label-text-color: var(--f7-text-color);

	--gradiant: None;

	--transparent-overlaw: var(--dark-overlaw);
	--transparent-underlaw: var(--light-overlaw);
	// --gradiant: linear-gradient(to left, rgba(0, 0, 0, 0) 2%, rgba(0, 0, 0, 1) 25%);


	--light-visible: None;
	--dark-visible: inherit;
}

body {
	margin: 0;

	font-family: Sen, sans-serif;
	font-size: 16px;
	line-height: 20px;
}


body,
html {
	// margin: 0 !important;
	// padding: 0 !important;
}

html {
	font-family: sans-serif;
	scroll-behavior: smooth;
	// -ms-text-size-adjust: 100%;
	// -webkit-text-size-adjust: 100%;
}

div {
	display: block;
	scroll-behavior: smooth;
}

* {
	box-sizing: border-box;
}


/* Your app custom styles here */
.progress-bar {
	position: fixed;
	left: 0%;
	top: 0%;
	right: 0%;
	bottom: auto;
	z-index: 100;
	width: 100%;
	height: 5px;
	// background-color: #5221e6;
	-webkit-transform-origin: 0% 50%;
	-ms-transform-origin: 0% 50%;
	transform-origin: 0% 50%;
}


// .picture.cover.light {
// 	display: var(--light-visible);
// }

// .picture.cover.dark {
// 	display: var(--dark-visible);
// }

// =============================================================
// =====                    Main Pages                     =====
// =============================================================

.hero-picture {
	overflow-y: hidden;
	background: url('https://raw.githubusercontent.com/IIVioletKingII/sam-depoule/main/src/assets/sam-68.jpg') center center;
	background-size: cover;
	position: relative;
	background-attachment: fixed;
}

.page-scroller {
	display: grid;
	grid-auto-flow: column;
	grid-auto-columns: 100%;
	overflow-x: scroll;
	scroll-snap-type: x mandatory;
	background: transparent;
	height: 100vh;
	height: 100svh;
}

.page-group {
	font-size: 1.5rem;
	line-height: 1.75rem;
	scroll-snap-align: start;
	padding: 2rem;
	padding-top: 86px;
	box-sizing: border-box;
	transition: transform 400ms ease;
	border-right: 5px rgba(255, 255, 255, 0.35);
}

// =============================================================



.d-flex {
	display: flex !important;
}

.flex-column {
	flex-direction: column !important;
}

.flex-row {
	flex-direction: row !important;
}

/*--------------------------------------------------------------
# Back to top button
--------------------------------------------------------------*/
.back-to-top {
	position: fixed;
	visibility: hidden;
	opacity: 0;
	right: 15px;
	bottom: 15px;
	z-index: 996;
	background: var(--f7-theme-color);
	width: 40px;
	height: 40px;
	border-radius: 50px;
	transition: all 0.4s;
}

.back-to-top i {
	font-size: 28px;
	color: #fff;
	line-height: 0;
}

.back-to-top:hover {
	background: var(--f7-theme-color);
	color: #fff;
}

.back-to-top.active {
	visibility: visible;
	opacity: 1;
}

/*--------------------------------------------------------------
  # Preloader
  --------------------------------------------------------------*/
#preloader {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 9999;
	overflow: hidden;
	background: #fff;
}

#preloader:before {
	content: "";
	position: fixed;
	top: calc(50% - 30px);
	left: calc(50% - 30px);
	border: 6px solid #0563bb;
	border-top-color: #fff;
	border-bottom-color: #fff;
	border-radius: 50%;
	width: 60px;
	height: 60px;
	-webkit-animation: animate-preloader 1s linear infinite;
	animation: animate-preloader 1s linear infinite;
}

@-webkit-keyframes animate-preloader {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

@keyframes animate-preloader {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

/*--------------------------------------------------------------
  # Header
  --------------------------------------------------------------*/

#header {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 9997;
	transition: all 0.5s;
	padding: 15px;
}

#navbar {
	display: flex;
	gap: 8px;
}

@media (min-width: 992px) {
	#header {
		width: 100%;
	}

}

@media (min-width: 992px) {
	#navbar {
		justify-content: center;
		flex-direction: row;
	}

}

@media (min-width: 992px) {

	.navbar {
		height: auto;
	}
}


@media (max-width: 991px) {
	#header {
		height: 100%;
		max-width: 256px;
		align-items: center;
	}

	#navbar {
		flex-direction: column;
	}

	.navbar {
		height: auto;
		width: auto;
	}
}

// @media (min-width: 991px) {
// 	#main {
// 		margin-left: 100px;
// 	}
// }

// ==============================================================
// =====                  Navigation Menu                   =====
// ==============================================================
/**
  * Desktop Navigation 
  */
.nav-menu * {
	margin: 0;
	padding: 0;
	// list-style: none;
	align-items: center;
	justify-content: center;
	display: flex;
	gap: 4px;
}

*,
::after,
::before {
	box-sizing: border-box;
}


.nav-menu a,
.nav-menu a:focus {
	// display: flex;
	align-items: center;
	color: var(--f7-text-color);
	padding: 10px 18px;
	transition: all 0.4s;
	font-size: 15px;
	border-radius: 35px;
	background: var(--accent-color);
	height: 56px;
}


.nav-menu a i,
.nav-menu a:focus i {
	font-size: 20px;
}

.nav-menu a span,
.nav-menu a:focus span {
	padding: 0 5px 0 7px;
	color: #45505b;
}


.nav-menu a:hover span,
.nav-menu .active span,
.nav-menu .active:focus span {
	color: #fff;
}

.nav-menu a:hover,
.nav-menu .active,
.nav-menu .active:focus {
	color: #fff;
	background: var(--f7-theme-color);
}

.nav-menu a {
	max-width: 256px;
}

.nav-menu a:hover {
	// width: 100%;
	width: auto;
	color: #fff;
	flex-direction: column !important;
	// justify-content: center;
	flex-wrap: wrap;
	// align-content: flex-start;
	height: auto !important;
	white-space: pre-wrap;
}

.nav-menu a:hover span {
	display: block;
}


@media (min-width: 992px) {

	.nav-menu a,
	.nav-menu a:focus {
		width: 56px;
	}

	.nav-menu a span,
	.nav-menu a:focus span {
		display: none;
		color: #fff;
	}

	.mobile-nav-toggle {
		display: none;
	}
}

// ==============================================================
// =====                 Mobile Navigation                  =====
// ==============================================================

.mobile-nav-menu * {
	margin: 0;
	padding: 0;
	align-items: center;
	justify-content: flex-start;
	gap: 4px;
}

.mobile-nav-menu a,
.mobile-nav-menu a:focus {
	display: flex;
	align-items: center;
	color: var(--f7-text-color);
	padding: 10px 18px;
	transition: all 0.4s;
	font-size: 15px;
	border-radius: 35px;
	background: var(--accent-color);
	height: 56px;
	width: auto;
	overflow: hidden;
}


.mobile-nav-menu a i,
.mobile-nav-menu a:focus i {
	font-size: 20px;
}

.mobile-nav-menu a span,
.mobile-nav-menu a:focus span {
	padding: 0 5px 0 7px;
	// color: #45505b;
}


.mobile-nav-menu a:hover span,
.mobile-nav-menu .active span,
.mobile-nav-menu .active:focus span {
	color: #fff;
}

.mobile-nav-menu a:hover,
.mobile-nav-menu .active,
.mobile-nav-menu .active:focus {
	color: #fff;
	background: var(--f7-theme-color);
}

.mobile-nav-menu a {
	max-width: 256px;
}


.mobile-nav-menu a:hover span {
	display: block;
}

@media (max-width: 992px) {

	.nav-menu a,
	.nav-menu a:focus span {
		display: none;
	}
}


@media (min-width: 993px) {

	.mobile-nav-menu a,
	.mobile-nav-menu a:focus span {
		display: none;
		color: #fff;
	}
}



.mobile-nav-toggle {
	position: fixed;
	inset: 30px auto auto 30px;
	z-index: 9998;
	background: none;
	font-size: 28px;
	transition: all 0.4s;
}

.mobile-nav-toggle i {
	color: var(--accent-color);
	filter: drop-shadow(0px 0px 1px var(--f7-text-color)) drop-shadow(0px 0px 5px var(--transparent-underlaw));
}


.mobile-nav-active .mobile-nav-toggle {
	color: #fff;
	background-color: #0563bb;
}

.mobile-nav-active.mobile-nav-background {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100vw;
	height: 100vh;
	z-index: 450;
	background-color: var(--transparent-overlaw);
	opacity: 0.7;
	transition: all 0.4s;
}







/*--------------------------------------------------------------
  # Hero Section
  --------------------------------------------------------------*/
// #hero {
// 	width: 100%;
// 	height: 100vh;
// 	background: url("../img/hero-bg.jpg") top right no-repeat;
// 	background-size: cover;
// 	position: relative;
// }

// @media (min-width: 992px) {
// 	#hero {
// 		padding-left: 160px;
// 	}
// }

// #hero:before {
// 	content: "";
// 	background: rgba(255, 255, 255, 0.8);
// 	position: absolute;
// 	bottom: 0;
// 	top: 0;
// 	left: 0;
// 	right: 0;
// }

// #hero h1 {
// 	margin: 0;
// 	font-size: 64px;
// 	font-weight: 700;
// 	line-height: 56px;
// 	color: #45505b;
// }

// #hero p {
// 	color: #45505b;
// 	margin: 15px 0 0 0;
// 	font-size: 26px;
// 	font-family: "Poppins", sans-serif;
// }

// #hero p span {
// 	color: #0563bb;
// 	letter-spacing: 1px;
// }

// #hero .social-links {
// 	margin-top: 30px;
// }

// #hero .social-links a {
// 	font-size: 24px;
// 	display: inline-block;
// 	color: #45505b;
// 	line-height: 1;
// 	margin-right: 20px;
// 	transition: 0.3s;
// }

// #hero .social-links a:hover {
// 	color: #0563bb;
// }

// @media (max-width: 992px) {
// 	#hero {
// 		text-align: center;
// 	}

// 	#hero h1 {
// 		font-size: 32px;
// 		line-height: 36px;
// 	}

// 	#hero p {
// 		margin-top: 10px;
// 		font-size: 20px;
// 		line-height: 24px;
// 	}
// }

/*--------------------------------------------------------------
  # Sections General
  --------------------------------------------------------------*/
// section {
// 	padding: 60px 0;
// 	overflow: hidden;
// }

// .section-title {
// 	text-align: center;
// 	padding-bottom: 30px;
// }

// .section-title h2 {
// 	font-size: 32px;
// 	font-weight: bold;
// 	text-transform: uppercase;
// 	margin-bottom: 20px;
// 	padding-bottom: 20px;
// 	position: relative;
// 	color: #45505b;
// }

// .section-title h2::before {
// 	content: "";
// 	position: absolute;
// 	display: block;
// 	width: 120px;
// 	height: 1px;
// 	background: #ddd;
// 	bottom: 1px;
// 	left: calc(50% - 60px);
// }

// .section-title h2::after {
// 	content: "";
// 	position: absolute;
// 	display: block;
// 	width: 40px;
// 	height: 3px;
// 	background: #0563bb;
// 	bottom: 0;
// 	left: calc(50% - 20px);
// }

// .section-title p {
// 	margin-bottom: 0;
// }

